# superscaler

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/: superscaler.conf  superscaler.service
packaging/deb/: changelog  control  postinst  postrm  rules  superscaler.install
packaging/rpm/: superscaler.spec
src/superscaler/: config.py  cooldown.py  main.py  queue_monitor.py  redis_monitor.py  scaler.py  supervisor_client.py
src/superscaler_plugin/: __init__.py  rpcinterface.py
