[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superscaler"
version = "1.1.1"
description = "Supervisor worker autoscaler"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["redis>=4.0.0"]

[project.scripts]
superscaler = "superscaler.main:main"

[tool.setuptools.packages.find]
where = ["src"]